--- a/layout.css
+++ b/layout.css
@@ -53,6 +53,7 @@ header {
 .logo-container {
     display: flex;
     align-items: center;
+    padding-left: 20px
 }
 
 #nav-logo  {
@@ -88,7 +89,7 @@ nav {
 
 .mobile-menu {
     height: 0px;
-    transition: height 0.4s ease-in-out;
+    transition: height 0.2s ease-in-out;
 }
 
 .mobile-menu-display {
@@ -111,7 +112,8 @@ nav {
     font-size: 0px;
     line-height: 40px;
     transition: height 0.4s ease-in-out, opacity 0.3s ease-in-out;
-    color: var(--green);
+    color: var(--white);
+    padding-left: 24px;
 }
 
 .mobile-nav-btn-display {
@@ -309,9 +311,6 @@ footer .copyright {
         --generic-containers-width: 425px
     }
 
-    .hero {
-        height: 200px;
-    }
 }
 
 @media screen and (max-width: 450px) {
